--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,5 @@
         "/opt/ros/humble/local/lib/python3.10/dist-packages",
         "/opt/ros/humble/lib/python3.8/site-packages"
     ],
+    "ros.distro": "humble",
 }
