--- a/params/navigation.yaml
+++ b/params/navigation.yaml
@@ -239,7 +239,6 @@ global_costmap:
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
-      filters: ["keepout_filter"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -272,15 +271,6 @@ global_costmap:
     ros__parameters:
       use_sim_time: True
 
-costmap_filter_info_server:
-  ros__parameters:
-    use_sim_time: true
-    type: 0
-    filter_info_topic: "/costmap_filter2_info"
-    mask_topic: "/preferred_lane_filter_mask"
-    base: 0.0
-    multiplier: 1.0
-
 map_server:
   ros__parameters:
     use_sim_time: True
@@ -301,6 +291,18 @@ planner_server:
 
     GridBased:
       plugin: "nav2_mod_planner/MoDPlanner"
+      steering_params:
+        turning_radius: 0.25
+        max_vehicle_speed: 0.3
+      planner_params:
+        sampler_type: "hybrid"
+        objective_type: "path-length"
+        weight_euclidean: 1.0
+        weight_quaternion: 1.0
+        weight_mod: 0.1
+        sampling_bias: 0.1
+        max_planning_time: 10.0
+        double path_resolution: 0.05
       smooth_path: True # If true, does a simple and quick smoothing post-processing to the path
       smoother:
         max_iterations: 1000
