--- a/params/navigation.yaml
+++ b/params/navigation.yaml
@@ -181,21 +181,10 @@ local_costmap:
         z_voxels: 16
         max_obstacle_height: 1.5
         mark_threshold: 0
-        observation_sources: scan1 scan2
-        scan1:
-          topic: /laser1/scan
-          sensor_frame: laser1_link
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "LaserScan"
-          raytrace_max_range: 2.0
-          raytrace_min_range: 0.05
-          obstacle_max_range: 1.00
-          obstacle_min_range: 0.05
-        scan2:
-          topic: /laser2/scan
-          sensor_frame: laser2_link
+        observation_sources: scan
+        scan:
+          topic: /scan
+          sensor_frame: turtlebot4/rplidar_link/rplidar
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -242,10 +231,10 @@ global_costmap:
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
-        observation_sources: scan1 scan2
-        scan1:
+        observation_sources: scan
+        scan:
           topic: /scan
-          sensor_frame: laser1_link
+          sensor_frame: turtlebot4/rplidar_link/rplidar
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -288,7 +277,6 @@ planner_server:
   ros__parameters:
     planner_plugins: ["GridBased"]
     use_sim_time: True
-
     GridBased:
       plugin: "nav2_mod_planner/MoDPlanner"
       steering_params:
