Simple planner in nav2_params

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -58,6 +58,7 @@ RUN apt-get update && apt-get install -y \
   xdg-utils \
   ros-${ROS_DISTRO}-rmw-cyclonedds-cpp \
   lsb-release \
+  silversearcher-ag \
   tmux \
   gnupg
 
@@ -65,9 +66,6 @@ RUN sudo curl https://packages.osrfoundation.org/gazebo.gpg --output /usr/share/
 RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null
 RUN apt-get update
 RUN apt-get install ignition-fortress ros-${ROS_DISTRO}-turtlebot4-simulator -y
-
-
-RUN pip install tmule
 
 ARG USERNAME=ros
 ARG USER_UID=1000
@@ -94,10 +92,17 @@ RUN groupadd render
 RUN usermod -a -G video ros
 RUN usermod -a -G render ros
 
+RUN mkdir -p /opt/dependencies_ws/src 
+RUN cd /opt/dependencies_ws/src && \
+    git clone https://github.com/OrebroUniversity/mod.git mod && \
+    cd .. && \
+    . /opt/ros/${ROS_DISTRO}/setup.sh && \
+    colcon build --merge-install --cmake-args -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE -DCMAKE_EXPORT_COMPILE_COMMANDS=1
+    
 # Create source folder and copy contents of this repo and other repos in this workspace. 
 WORKDIR $WS
 RUN mkdir src
-COPY --chown=$USERNAME . $WORKSPACE/src/
+COPY --chown=$USERNAME . $WORKSPACE/src/nav2_mod_planner
 
 USER $USERNAME
 RUN sudo chown -R ros:ros /home/ros
@@ -107,7 +112,7 @@ RUN sudo apt-get update && \
     rosdep update && \
     rosdep install --from-paths src --ignore-src -y
 
-RUN . /opt/ros/${ROS_DISTRO}/setup.sh && colcon build --merge-install --symlink-install --cmake-args -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE -DCMAKE_EXPORT_COMPILE_COMMANDS=1
+RUN . /opt/dependencies_ws/install/setup.sh && colcon build --merge-install --symlink-install --cmake-args -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE -DCMAKE_EXPORT_COMPILE_COMMANDS=1
 
 RUN bash -c "$(curl -fsSL https://raw.githubusercontent.com/ohmybash/oh-my-bash/master/tools/install.sh)"
 RUN sed -i 's/font/pure/g' ${HOME}/.bashrc
