--- a/params/navigation.yaml
+++ b/params/navigation.yaml
@@ -269,32 +269,14 @@ map_saver:
 
 planner_server:
   ros__parameters:
+    expected_planner_frequency: 20.0
     planner_plugins: ["GridBased"]
-    use_sim_time: True
     GridBased:
-      plugin: "nav2_mod_planner/MoDPlanner"
-      steering_params:
-        turning_radius: 0.25
-        max_vehicle_speed: 0.3
-      planner_params:
-        planner_type: "prmstar"
-        sampler_type: "hybrid"
-        objective_type: "path-length"
-        weight_euclidean: 1.0
-        weight_quaternion: 1.0
-        weight_mod: 0.1
-        sampling_bias: 0.1
-        max_planning_time: 4.0
-        double path_resolution: 0.05
-      smooth_path: True # If true, does a simple and quick smoothing post-processing to the path
-      smoother:
-        max_iterations: 1000
-        w_smooth: 0.3
-        w_data: 0.2
-        tolerance: 1.0e-10
-        do_refinement: true
-        refinement_num: 2
-
+      plugin: "nav2_navfn_planner::NavfnPlanner"
+      tolerance: 0.5
+      use_astar: false
+      allow_unknown: true
+      
 planner_server_rclcpp_node:
   ros__parameters:
     use_sim_time: True
