--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     container_name: motion-planning
     image: bench_ros2
     build:
-      context: ..
-      dockerfile: nav2_mod_planner/.devcontainer/Dockerfile
+      context: .
+      dockerfile: .devcontainer/Dockerfile
     # ipc: host
     network_mode: host
     environment:
@@ -14,7 +14,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/.X11-unix:/tmp/.X11-unix
-      - ../:/home/ros/ws/src
+      - ./:/home/ros/ws/src/nav2_mod_planner
       - /dev/bus/usb/:/dev/bus/usb
     stdin_open: true
     privileged: true
